--- a/wp-content/themes/quicksand/dev/scss/_navbar.scss
+++ b/wp-content/themes/quicksand/dev/scss/_navbar.scss
@@ -104,6 +104,7 @@ $navbar-height: 60px;
 
     .nav-searchform-mobile { 
         margin-top: 1rem;  
+        display: none;
 
         .nav-search-mobile-close {
             padding: 0;
